--- a/k8s-daemonset/k8s/linkerd-namerd.yml
+++ b/k8s-daemonset/k8s/linkerd-namerd.yml
@@ -23,11 +23,11 @@ data:
       label: outgoing
       interpreter:
         kind: io.l5d.namerd
-        dst: /$/inet/namerd.default.svc.cluster.local/4100
+        dst: /$/inet/namerd.linkerd-ns.svc.cluster.local/4100
         namespace: internal
         transformers:
         - kind: io.l5d.k8s.daemonset
-          namespace: default
+          namespace: linkerd-ns
           port: incoming
           service: l5d
       servers:
@@ -41,7 +41,7 @@ data:
       label: incoming
       interpreter:
         kind: io.l5d.namerd
-        dst: /$/inet/namerd.default.svc.cluster.local/4100
+        dst: /$/inet/namerd.linkerd-ns.svc.cluster.local/4100
         namespace: internal
         transformers:
         - kind: io.l5d.k8s.localnode
@@ -53,7 +53,7 @@ data:
       label: external
       interpreter:
         kind: io.l5d.namerd
-        dst: /$/inet/namerd.default.svc.cluster.local/4100
+        dst: /$/inet/namerd.linkerd-ns.svc.cluster.local/4100
         namespace: external
       servers:
       - port: 4142
