--- a/k8s-daemonset/k8s/linkerd-zipkin.yml
+++ b/k8s-daemonset/k8s/linkerd-zipkin.yml
@@ -31,7 +31,7 @@ data:
     - protocol: http
       label: outgoing
       dtab: |
-        /srv        => /#/io.l5d.k8s/default/http;
+        /srv        => /#/io.l5d.k8s/linkerd-ns/http;
         /host       => /srv;
         /svc        => /host;
         /host/world => /srv/world-v1;
@@ -39,7 +39,7 @@ data:
         kind: default
         transformers:
         - kind: io.l5d.k8s.daemonset
-          namespace: default
+          namespace: linkerd-ns
           port: incoming
           service: l5d
       servers:
@@ -52,7 +52,7 @@ data:
     - protocol: http
       label: incoming
       dtab: |
-        /srv        => /#/io.l5d.k8s/default/http;
+        /srv        => /#/io.l5d.k8s/linkerd-ns/http;
         /host       => /srv;
         /svc        => /host;
         /host/world => /srv/world-v1;
