--- a/k8s-daemonset/k8s/namerd.yml
+++ b/k8s-daemonset/k8s/namerd.yml
@@ -26,7 +26,7 @@ data:
       kind: io.l5d.k8s
       host: localhost
       port: 8001
-      namespace: default
+      namespace: linkerd-ns
 
     interfaces:
     - kind: io.l5d.thriftNameInterpreter
@@ -107,7 +107,7 @@ data:
       echo "external namespace already exists"
     else
       echo "
-      /host       => /#/io.l5d.k8s/default/http/hello;
+      /host       => /#/io.l5d.k8s/linkerd-ns/http/hello;
       /svc/*      => /host;
       " | namerctl dtab create external -
     fi
@@ -116,7 +116,7 @@ data:
       echo "internal namespace already exists"
     else
       echo "
-      /srv        => /#/io.l5d.k8s/default/http;
+      /srv        => /#/io.l5d.k8s/linkerd-ns/http;
       /host       => /srv;
       /tmp        => /srv;
       /svc        => /host;
@@ -143,7 +143,7 @@ spec:
         image: linkerd/namerctl:0.8.6
         env:
         - name: NAMERCTL_BASE_URL
-          value: http://namerd.default.svc.cluster.local:4180
+          value: http://namerd.linkerd-ns.svc.cluster.local:4180
         command:
         - "/namerctl/createNs.sh"
         volumeMounts:
