--- a/gob/k8s/linkerd.yml
+++ b/gob/k8s/linkerd.yml
@@ -2,7 +2,7 @@ kind: ConfigMap
 apiVersion: v1
 metadata:
   name: linkerd-config
-  namespace: default
+  namespace: linkerd-ns
 data:
   config.yml: |-
     routers:
