--- a/gob/k8s/namerd/config.yml
+++ b/gob/k8s/namerd/config.yml
@@ -2,7 +2,7 @@ kind: ConfigMap
 apiVersion: v1
 metadata:
   name: namerd-config
-  namespace: default
+  namespace: linkerd-ns
 data:
   config.yml: |-
     admin:
