--- a/k8s-daemonset/k8s/linkerd-cni.yml
+++ b/k8s-daemonset/k8s/linkerd-cni.yml
@@ -28,7 +28,7 @@ data:
     - protocol: http
       label: outgoing
       dtab: |
-        /srv        => /#/io.l5d.k8s/default/http;
+        /srv        => /#/io.l5d.k8s/linkerd-ns/http;
         /host       => /srv;
         /svc        => /host;
         /host/world => /srv/world-v1;
@@ -36,7 +36,7 @@ data:
         kind: default
         transformers:
         - kind: io.l5d.k8s.daemonset
-          namespace: default
+          namespace: linkerd-ns
           port: incoming
           service: l5d
           hostNetwork: true
@@ -50,7 +50,7 @@ data:
     - protocol: http
       label: incoming
       dtab: |
-        /srv        => /#/io.l5d.k8s/default/http;
+        /srv        => /#/io.l5d.k8s/linkerd-ns/http;
         /host       => /srv;
         /svc        => /host;
         /host/world => /srv/world-v1;
