--- a/k8s-daemonset/k8s/linkerd-latency.yml
+++ b/k8s-daemonset/k8s/linkerd-latency.yml
@@ -24,7 +24,7 @@ data:
     - protocol: http
       label: outgoing
       dtab: |
-        /srv        => /#/io.l5d.k8s/default/http;
+        /srv        => /#/io.l5d.k8s/linkerd-ns/http;
         /host       => /srv;
         /svc        => /host;
         /host/world => /srv/world-v1;
@@ -32,7 +32,7 @@ data:
         kind: default
         transformers:
         - kind: io.l5d.k8s.daemonset
-          namespace: default
+          namespace: linkerd-ns
           port: incoming
           service: l5d
       servers:
@@ -49,7 +49,7 @@ data:
     - protocol: http
       label: incoming
       dtab: |
-        /srv        => /#/io.l5d.k8s/default/http;
+        /srv        => /#/io.l5d.k8s/linkerd-ns/http;
         /host       => /srv;
         /svc        => /host;
         /host/world => /srv/world-v1;
