--- a/linkerd-tcp/linkerd.yml
+++ b/linkerd-tcp/linkerd.yml
@@ -11,7 +11,7 @@ routers:
   interpreter:
     kind: io.l5d.namerd
     dst: /$/inet/namerd/4100
-    namespace: default
+    namespace: linkerd-ns
   servers:
   - port: 4140
     ip: 0.0.0.0
